@@ -39,7 +39,7 @@
 
 .api {
     // font-size: 16px;
-    // font-family: "Fira Sans", Helvetica, Arial, sans-serif;
+    // font-family: $font-sans;
     // text-align: left;
     // color: #333;
     // background: #FFFFFF;
@@ -259,7 +259,7 @@
     we restart the sequence there like h2  */
 
        h1, h2, h3, h4, h5, h6, .h7, .h8, .h9, .h10 {
-	font-family: "Fira Sans", Helvetica, Arial, sans-serif;
+	font-family: $font-sans;
 	font-weight: 400;
 	margin: 0.5em 0 0.5em 0;
 	padding-top: 0.1em;
@@ -316,7 +316,7 @@
     /* Preformatted and code */
 
     tt, code, pre {
-	font-family: "Fira Mono", courier;
+	font-family: $font-mono;
 	font-weight: 400;
     }
 
@@ -705,7 +705,7 @@
     span.arrow {
 	font-size: 20px;
 	line-height: 8pt;
-	font-family: "Fira Mono";
+	font-family: $font-mono;
     }
     header dl dd, header dl dt {
 	display: inline-block;
@@ -742,7 +742,7 @@
     }
     
     ul.tutos_menu {
-	font-family: "Fira Sans";
+	font-family: $font-sans;
 	text-align: right;
 	list-style: none;
     }
@@ -756,7 +756,7 @@
     }
 
     span.c003 {
-	font-family: "Fira Mono", courier;
+	font-family: $font-mono;
 	background-color: #f3ece6;
 	border-radius: 6px;
     }
@@ -793,8 +793,7 @@
 
     code span.constructor,
     .caml-input span.kw2 {
-	font-weight: 500;
-	color: #a28867;
+	color: #8d543c;
     }
 
     .caml-input span.numeric {
